resources.tf
# Define webserver inside the public subnet
resource "aws_instance" "wb" {
  ami                         = "${var.ami}"
  instance_type               = "t1.micro"
  key_name                    = "${var.keypair}"
  subnet_id                   = "${aws_subnet.public-subnet.id}"
  vpc_security_group_ids      = ["${aws_security_group.sgweb.id}"]
  associate_public_ip_address = true
  source_dest_check           = false
  user_data                   = "${file("install.sh")}"

  tags = {
    Name = "webserver"
  }
}

# Define database inside the private subnet
resource "aws_instance" "db" {
  ami                    = "${var.ami}"
  instance_type          = "t1.micro"
  key_name               = "${var.keypair}"
  subnet_id              = "${aws_subnet.private-subnet.id}"
  vpc_security_group_ids = ["${aws_security_group.sgdb.id}"]
  source_dest_check      = false

  tags = {
    Name = "database"
  }
}
